WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80004
Handle CSSPropertyWebkitHyphens in CSSStyleApplyProperty.
https://bugs.webkit.org/show_bug.cgi?id=80004
Summary
Handle CSSPropertyWebkitHyphens in CSSStyleApplyProperty.
Luke Macpherson
Reported
2012-02-29 22:11:05 PST
Handle CSSPropertyWebkitHyphens in CSSStyleApplyProperty.
Attachments
Patch
(3.64 KB, patch)
2012-02-29 22:16 PST
,
Luke Macpherson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Luke Macpherson
Comment 1
2012-02-29 22:16:05 PST
Created
attachment 129631
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-02-29 22:20:41 PST
Comment on
attachment 129631
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-03-01 03:41:39 PST
The commit-queue encountered the following flaky tests while processing
attachment 129631
[details]
: css3/filters/effect-invert-hw.html
bug 79639
(author:
cmarrin@apple.com
) fast/workers/storage/use-same-database-in-page-and-workers.html
bug 50995
(author:
dumi@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Review Bot
Comment 4
2012-03-01 03:42:40 PST
Comment on
attachment 129631
[details]
Patch Rejecting
attachment 129631
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/11779405
WebKit Review Bot
Comment 5
2012-03-01 03:43:49 PST
Comment on
attachment 129631
[details]
Patch Clearing flags on attachment: 129631 Committed
r109331
: <
http://trac.webkit.org/changeset/109331
>
WebKit Review Bot
Comment 6
2012-03-01 03:43:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug