Handle CSSPropertyWebkitHyphens in CSSStyleApplyProperty. https://bugs.webkit.org/show_bug.cgi?id=80004

Reviewed by Eric Seidel.

No new tests / refactoring only.

* css/CSSStyleApplyProperty.cpp:
(WebCore::CSSStyleApplyProperty::CSSStyleApplyProperty):
* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::collectMatchingRulesForList):


git-svn-id: svn://svn.chromium.org/blink/trunk@109331 bbb929c8-8fbe-4397-9dbb-9b2b20218538